changed code to use the general openai backend, which is cross compatible with multiple platforms over using just using gemini
also simplified the frontend renderer, this closes Support a general LLM backend #8
